[gd_scene load_steps=2 format=3 uid="uid://c7vond3ba2425"]

[ext_resource type="Script" uid="uid://kx6xo6yxaskd" path="res://scenes/ui/save_file_modal/save_file_modal.gd" id="1_x3o5k"]

[node name="SaveFileModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x3o5k")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Import / Export"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "x"

[node name="Tooltip" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.662452, 0.662452, 0.662452, 1)
text = "tooltip"

[node name="TextArea" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
theme_override_font_sizes/font_size = 12
placeholder_text = "Import string goes here"
wrap_mode = 1

[node name="ErrorMessage" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.74902, 0, 0, 1)
text = "Error Message"

[node name="Actions" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 2

[node name="ImportButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Actions"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ProgressButton"
text = "Import"

[node name="AcceptButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Actions"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ProgressButton"
text = "Accept"
